syntax = "proto3";

import "certificates.proto";
import "transaction.proto";
option go_package = "gitdc.ee.guardtime.com/alphabill/alphabill/internal/protocol/pc1o;pc1o";

message PC1ORequest {
  bytes system_identifier = 1;
  string node_identifier = 2;
  UnicityCertificate unicity_certificate = 3;
  repeated Transaction transactions = 4;
  bytes signature = 5;
}
